Fix: resolve various bugs and issues
- Fix duplicate active_job.queue_adapter config in development.rb
- Drop orphaned project_uploads table
- Add user association to PrprojUpload model
- Optimize OpenAI client usage with global constant
- Add missing i18n translations for German and English
- Fix dotenv deprecation warning

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -63,6 +63,22 @@ de:
     hint_reload: "Sollten keine Medien angezeigt werden, lade die Seite bitte einmal neu. Die Analyse kann wenige Sekunden dauern."
     no_media: "Keine Medien im Projekt gefunden."
     ki_start: "KI-Analyse starten"
+    missing_media: "Fehlende Medien"
+    no_missing_media: "Keine fehlenden Medien erkannt."
+    ki_running: "KI-Analyse läuft..."
+    ki_running_hint: "Die Analyse wird im Hintergrund durchgeführt. Bitte warte einen Moment."
+    ki_progress_text: "Sequenzen analysiert"
+    ki_current_sequence: "Aktuelle Sequenz"
+    select_sequences: "Sequenzen auswählen"
+    skipped_sequences_title: "Folgende Sequenzen konnten nach 3 Versuchen nicht analysiert werden und wurden übersprungen:"
+    skipped_sequences_hint: "Bitte prüfe die XML oder versuche es ggf. mit einer anderen Export-Einstellung erneut."
+  sequences_select:
+    title: "Sequenzen auswählen"
+    intro: "Wähle die Sequenzen aus, die für dein finales Video relevant sind. Nur diese werden von der KI analysiert."
+    no_sequences: "Keine Sequenzen gefunden."
+    duration: "Dauer"
+    unnamed: "Unbenannt"
+    submit: "KI-Analyse für ausgewählte Sequenzen starten"
   faq:
     title: "Häufige Fragen (FAQ)"
     subtitle: "Alles, was du über VoidFiles wissen musst"
