--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -92,6 +92,22 @@ en:
     hint_reload: "If no media is displayed, please reload the page. The analysis may take a few seconds."
     no_media: "No media found in the project."
     ki_start: "Start AI analysis"
+    missing_media: "Missing media"
+    no_missing_media: "No missing media detected."
+    ki_running: "AI analysis running..."
+    ki_running_hint: "The analysis is running in the background. Please wait a moment."
+    ki_progress_text: "sequences analyzed"
+    ki_current_sequence: "Current sequence"
+    select_sequences: "Select sequences"
+    skipped_sequences_title: "The following sequences could not be analyzed after 3 attempts and were skipped:"
+    skipped_sequences_hint: "Please check the XML or try again with different export settings."
+  sequences_select:
+    title: "Select sequences"
+    intro: "Select the sequences that are relevant for your final video. Only these will be analyzed by the AI."
+    no_sequences: "No sequences found."
+    duration: "Duration"
+    unnamed: "Unnamed"
+    submit: "Start AI analysis for selected sequences"
   faq:
     title: "Frequently Asked Questions (FAQ)"
     subtitle: "Everything you need to know about VoidFiles"
